--- a/web_stories/index.html
+++ b/web_stories/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/91/three.min.js"></script>
     <script src="OrbitControls.js"></script>
-    <script src="config.js"></script>
+    <script src="keys.js"></script>
 
     <style>
       body {
